--- a/style.css
+++ b/style.css
@@ -18,27 +18,15 @@
     width: 100%;
     height: 100%;
     background-color: #eee;
-}
-
-.ducks {
-    position: absolute;
-    top: 10%;
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    width: 100%;
-    height: 30%;
-    background-color: blue;
     overflow: hidden;
 }
 
 .duck {
     position: relative;
-    left: -100px;
     width: 70px;
     height: 70px;
     background-color: yellow;
-    animation: duckMove 2s linear infinite;
+    /* animation: duckMove 2s linear infinite; */
 }
 
 .gun {
