--- a/style.css
+++ b/style.css
@@ -28,6 +28,22 @@
     overflow: hidden;
 }
 
+.score {
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+}
+
+.score span {
+    font-weight: bold;
+    margin-left: 10px;
+}
+
 .duck {
     position: relative;
     display: flex;
@@ -41,8 +57,20 @@
     height: inherit;
 }
 
+.explosion {
+    position: absolute;
+    top: 20%;
+    left: 0px;
+    display: none;
+}
+
+.explosion img {
+    height: 100px;
+}
+
 .gun {
     position: absolute;
+    z-index: 99;
     bottom: 10%;
     left: calc(50% - 50px);
     display: flex;
@@ -73,6 +101,42 @@
 .shotAnimation {
     animation: shotAnimation linear;
     animation-duration: 0s;
+}
+
+.victory {
+    position: absolute;
+    z-index: 999;
+    top: 70px;
+    width: 100%;
+    height: 60%;
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.victory-content {
+    background-color: #fff;
+    width: 80%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 0px 32px 10px rgba(204,204,204,1);
+}
+
+.victory p {
+    font-size: 36px;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+.victory button {
+    width: 130px;
+    height: 40px;
+    border: 1px solid #000;
+    border-radius: 10px;
+    outline: none;
 }
 
 @keyframes shotAnimation {
