--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@
     padding: 0;
 }
 
+.duck, .gun {color: #eee;}
+
+
 .container {
     width: 100%;
     height: 100vh;
@@ -116,6 +119,7 @@
 
 .victory-content {
     background-color: #fff;
+    background-size: cover;
     width: 80%;
     height: 100%;
     display: flex;
